--- a/app/src/main/res/layout/activity_categoria_list.xml
+++ b/app/src/main/res/layout/activity_categoria_list.xml
@@ -25,6 +25,16 @@
         android:focusable="true"
         android:clickable="true"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/list_empty"
+        android:layout_marginTop="70dp"
+        android:text="Nenhuma coleção adicionada"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"/>
 
     <android.support.design.widget.FloatingActionButton
         android:src="@drawable/ic_add_black_48px"
@@ -32,6 +42,7 @@
         app:fabSize="normal"
         android:layout_gravity="right"
         android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/activity_vertical_margin"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
