--- a/app/src/main/res/layout/activity_objeto_list.xml
+++ b/app/src/main/res/layout/activity_objeto_list.xml
@@ -22,12 +22,23 @@
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/list_empty"
+        android:layout_marginTop="70dp"
+        android:text="Nenhum item adicionado"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"/>
 
     <android.support.design.widget.FloatingActionButton
         android:src="@drawable/ic_add_black_48px"
         android:id="@+id/novo"
         app:fabSize="normal"
         android:layout_gravity="right"
+        android:layout_margin="@dimen/activity_vertical_margin"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
