--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,13 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="background_material_light">#cdffca</color>
     <color name="background">#f5f5f5</color>
     <color name="primary_material_light">#72af5f</color>
-    <color name="accent_material_light">#2c8c29</color>
+    <color name="accent_material_light">#fdff40</color>
     <color name="primary_dark_material_light">#72af5f</color>
     <color name="foreground_material_dark">#000000</color>
+    <color name="accent_material_light_1">#000000</color>
+    <color name="accent_material_light_2">#000000</color>
 </resources>
