--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#ff4081</color>
     <color name="background_material_light">#cdffca</color>
     <color name="background">#f5f5f5</color>
-    <color name="primary_material_light">#72af5f</color>
+    <color name="primary_material_light">#b0e4a0</color>
     <color name="accent_material_light">#fdff40</color>
     <color name="primary_dark_material_light">#72af5f</color>
     <color name="foreground_material_dark">#000000</color>
