--- a/app/src/main/res/layout/activity_objeto_cadastro.xml
+++ b/app/src/main/res/layout/activity_objeto_cadastro.xml
@@ -11,65 +11,69 @@
     android:orientation="vertical"
     tools:context="firzen.tcc.ObjetoCadastroActivity">
     <include layout="@layout/toolbar" />
+    <ScrollView
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         tools:context="firzen.tcc.ObjetoCadastroActivity">
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nome" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nome" />
 
-    <EditText
-        android:id="@+id/editObjeto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:maxLength="24"
-        android:inputType="textPersonName"
-        android:text="" />
+            <EditText
+                android:id="@+id/editObjeto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:maxLength="24"
+                android:inputType="textPersonName"
+                android:text="" />
 
 
-    <TextView
-        android:id="@+id/txtNumItems"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nº do mais recente"
-        android:visibility="gone" />
+            <TextView
+                android:id="@+id/txtNumItems"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nº do mais recente"
+                android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/editNumItems"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        android:visibility="gone" />
+            <EditText
+                android:id="@+id/editNumItems"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="number"
+                android:visibility="gone" />
 
-    <Button
-        android:id="@+id/btnFoto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Escolher Imagem"
-        android:onClick="tirarFoto"/>
+            <Button
+                android:id="@+id/btnFoto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Escolher Imagem"
+                android:onClick="tirarFoto"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_gravity="center"
-        android:visibility="gone"
-        android:layout_width="120dp"
-        android:layout_height="180dp" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:layout_width="120dp"
+                android:layout_height="180dp" />
 
-    <Button
-        android:id="@+id/btnCadastrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Salvar"
-        android:onClick="cadastrar">
-    </Button>
-</LinearLayout>
+            <Button
+                android:id="@+id/btnCadastrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Salvar"
+                android:onClick="cadastrar">
+            </Button>
+    </LinearLayout>
+    </ScrollView>
     </LinearLayout>
     <include layout="@layout/drawer_list" />
 </android.support.v4.widget.DrawerLayout>
